# tinkerloop

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.codex/skills/pre-pr-review/: SKILL.md
.codex/skills/tinkerloop-integration/: SKILL.md
.codex/skills/tinkerloop-runner/: SKILL.md
.codex/skills/tinkerloop-scenarios/: SKILL.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: orchestrator.agent.md
.github/workflows/: ci.yml  release-wheel.yml
docs/: ACTOR_MODEL.md  ADAPTER_GUIDE.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  MVP_PLAN.md  ORCHESTRATOR_MODEL.md  PROJECT_CHARTER.md  QUICKSTART_TARGET_REPO.md  RELEASE_CHECKLIST.md  STABILITY.md  TARGET_CONTRACT.md  TROUBLESHOOTING.md  TRUST_MODEL.md  WORKED_EXAMPLE.md  WORKING_AGREEMENT.md
examples/: __init__.py
examples/demo_app/: README.md  __init__.py  adapter.py  app.py
examples/demo_app/scenarios/: cleanup_execute_and_undo.json  cleanup_preview_first_unit.json
examples/moppa/: README.md  adapter.py
examples/moppa/scenarios/: cleanup_execute_and_undo.json  cleanup_first_unit.json  cleanup_irreversible_refusal.json  cleanup_novice_delegate_and_undo.json  cleanup_preview_first_unit.json  cleanup_undo_last_two.json  future_routing_create_and_remove.json  guided_cleanup_interview_apply_and_undo.json  guided_cleanup_route_future_and_remove.json  reclassification_continue_next_unit.json  reclassification_create_and_undo.json  reclassify_then_cleanup_bundle_and_undo.json  send_first_time_setup_and_send.json  send_named_contact_then_email_then_send.json  send_reuse_saved_identity.json
examples/starter_target/: README.md  __init__.py  adapter.py  app.py
examples/starter_target/failure_scenarios/: greet_user_wrong_name.json
examples/starter_target/scenarios/: greet_user_by_name.json
scripts/: smoke_test_built_wheel.sh
src/tinkerloop/: __about__.py  __init__.py  cli.py  engine.py  models.py
src/tinkerloop/adapters/: __init__.py  base.py  command_target.py  env_files.py  python_target.py
tests/unit/: test_cli.py  test_command_adapter.py  test_demo_app.py  test_engine.py  test_moppa_adapter.py  test_python_target.py  test_starter_target.py
