[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "tinkerloop"
dynamic = ["version"]
description = "Eval-driven test/fix/improve harness for orchestrator-based apps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
tinkerloop = "tinkerloop.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.hatch.version]
path = "src/tinkerloop/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tinkerloop"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/src/tinkerloop",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
