[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "tinkerloop-ai"
dynamic = ["version"]
description = "Eval-driven test/fix/improve harness for orchestrator-based apps"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "Bostone Co." },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
[project.urls]
Repository = "https://github.com/bostoneco/tinkerloop"
Documentation = "https://github.com/bostoneco/tinkerloop#readme"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "hatchling>=1.27.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
tinkerloop = "tinkerloop.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.hatch.version]
path = "src/tinkerloop/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tinkerloop"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/src/tinkerloop",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
